# moss-kernel

./: .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  build.rs  flake.nix  pr.diff  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  test.yml
etc/: dual_architecture_support.md  futex2.md  futex2_review.md  syscalls_linux_aarch64.md  syscalls_linux_x86_64.md  x86_64_architecture.md
etc/docs/: build-system.md  busybox-x86_64.md  (+1 more)
libkernel/: Cargo.toml  README.md
libkernel/src/: driver.rs  error.rs  lib.rs  pod.rs
libkernel/src/arch/: mod.rs
libkernel/src/arch/arm64/: mod.rs  stacktrace.rs
libkernel/src/arch/arm64/memory/: mod.rs  pg_descriptors.rs  pg_tables.rs  pg_tear_down.rs  pg_walk.rs  tlb.rs
libkernel/src/arch/x86_64/memory/: mod.rs  pg_descriptors.rs  pg_tables.rs  pg_tear_down.rs  pg_walk.rs
libkernel/src/error/: syscall_error.rs
libkernel/src/fs/: attr.rs  mod.rs
libkernel/src/fs/blk/: block_cache.rs  buffer.rs  mod.rs  ramdisk.rs
libkernel/src/fs/filesystems/: mod.rs  tmpfs.rs
libkernel/src/fs/filesystems/ext4/: dir_entry.rs  group.rs  inode.rs  mod.rs  superblock.rs
libkernel/src/fs/filesystems/fat32/: bpb.rs  dir.rs  fat.rs  file.rs  mod.rs
libkernel/src/memory/: address.rs  address_space.rs  claimed_page.rs  kbuf.rs  mod.rs  page.rs  page_alloc.rs  permissions.rs  pg_offset.rs  region.rs  smalloc.rs
libkernel/src/memory/allocators/: frame.rs  mod.rs  phys.rs  smalloc.rs
libkernel/src/memory/allocators/slab/: allocator.rs  cache.rs  heap.rs  mod.rs  slab.rs
libkernel/src/memory/paging/: mod.rs  smalloc_page_allocator.rs  tear_down.rs  test.rs  walk.rs
libkernel/src/memory/proc_vm/: address_space.rs  mod.rs  pg_offset.rs  vmarea.rs
libkernel/src/memory/proc_vm/memory_map/: mod.rs  tests.rs
libkernel/src/proc/: caps.rs  ids.rs  mod.rs
libkernel/src/sync/: condvar.rs  mod.rs  mpsc.rs  mutex.rs  once_lock.rs  per_cpu.rs  rwlock.rs  spinlock.rs  waker_set.rs
moss-macros/: Cargo.toml
scripts/: build-deps.sh  create-image.sh  qemu-runner-x86_64.sh  qemu-runner.sh  qemu-test-runner.sh  qemu_runner.py  recreate-moss-raw.sh
src/: main.rs
usertest/: Cargo.toml  rust-toolchain.toml
(+225 files in other folders)
