[workspace]
members = ["libkernel", "usertest"]

[workspace.lints.clippy]
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"

[package]
name = "moss"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "moss"
test = true
bench = false

[dependencies]
libkernel = { path = "libkernel" }
aarch64-cpu = "11.1.0"
arm-pl011-uart = { version = "0.4.0", default-features = false }
tock-registers = "0.10.1"
log = "0.4.27"
fdt-parser = "0.4.16"
paste = "1.0.15"
object = { version = "0.38.0", default-features = false, features = ["core", "elf", "read_core"] }
async-trait = "0.1.88"
getargs = { version = "0.5.0", default-features = false }
ringbuf = { version = "0.4.8", default-features = false, features = ["alloc"] }
bitflags = "2.9.1"
futures = { version = "0.3.31", default-features = false, features = ["alloc", "async-await"] }
rand = { version = "0.9.2", default-features = false, features = ["small_rng"] }
rustc-hash = { version = "2.1", default-features = false }

[build-dependencies]
time = { version = "0.3.47", features = ["formatting", "macros"] } # For build timestamping via build.rs

[features]
default = ["smp"]
# Support for Symmetric Multiprocessing
smp = []

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1

[lints]
workspace = true

