[package]
name = "libkernel"
version = "0.0.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
bitflags = { workspace = true }
ext4-view = { git = "https://github.com/arihant2math/ext4-view-rs.git", branch = "main" }
intrusive-collections = { version = "0.10.0", default-features = false }
log = { workspace = true }
object = { version = "0.38.0", default-features = false, features = ["core", "elf", "read_core"] }
paste = { workspace = true }
ringbuf = { version = "0.4.8", default-features = false, features = ["alloc"] }
thiserror = { version = "2.0.12", default-features = false }
tock-registers = "0.10.1"

[dev-dependencies]
rand = { workspace = true, features = ["default"] }
tokio = { version = "1.47.1", features = ["full"] }

[lints]
workspace = true
